Bug with page size in offer page fixed. Added links for the first and the last page.

--- a/travel-web/WebContent/resources/css/default.css
+++ b/travel-web/WebContent/resources/css/default.css
@@ -1,49 +1,63 @@
 body {
 	max-width: 750pt;
-	margin-left:auto;
-	margin-right:auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .headerDiv {
-	border-style:solid; 
-	border-color: rgb(110, 139, 255); 
-	border-width:1px; 
-	border-radius:5px;
-	width:100%;
-	box-shadow:5pt 5pt 12pt #777777;
-	margin-left:auto;
-	margin-right:auto;
+	border-style: solid;
+	border-color: rgb(110, 139, 255);
+	border-width: 1px;
+	border-radius: 5px;
+	width: 100%;
+	box-shadow: 5pt 5pt 12pt #777777;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 a {
 	color: rgb(110, 139, 255);
 }
+
 .headerText {
-	text-align: center; 
-	color: rgb(110, 139, 255); 
-	font-size: 44pt; 
+	text-align: center;
+	color: rgb(110, 139, 255);
+	font-size: 44pt;
 	text-shadow: 6px 6px 12px #444444;
 }
+
 #mainDiv {
 	margin: 5px;
 }
+
 h1.contentTitle {
-	color:red; 
+	color: red;
 	font-size: 30pt;
 	margin-left: auto;
-    margin-right: auto;
+	margin-right: auto;
 }
-	
+
 .mainButton {
 	margin-left: 12pt;
 	margin-right: 12pt;
 }
+
+.nameColumn {
+	border-width: 0px;
+}
+
+.valueColumn {
+	border-width: 0px;
+	padding-right: 3px;
+}
+
 .titleColumn {
 	background-color: #A1A1A1;
-	font-weight:  bold;
+	font-weight: bold;
 	border-style: none;
 	border-width: 0px;
 }
+
 .dataColumn {
 	border-style: dotted;
 	border-width: 0px;
@@ -58,12 +72,15 @@ h1.contentTitle {
 	content: " ";
 	display: table;
 }
+
 .clearfix:after {
 	clear: both;
 }
+
 .clearfix {
-    *zoom: 1; /* For IE 6/7 only */
+	*zoom: 1; /* For IE 6/7 only */
 }
+
 .menuContent table {
 	padding-top: 12px;
 	padding-bottom: 12px;
@@ -94,49 +111,62 @@ h1.contentTitle {
 
 .menuPanel {
 	width: 190px;
-	background-color:white;
+	background-color: white;
 	padding-top: 12px;
 	padding-bottom: 12px;
 }
-.contentFrame {
-	border-radius:5px; 
+
+.contentFrame, .mainContent {
+	border-radius: 5px;
 	border: 1px solid rgb(110, 139, 255);
-	box-shadow:5pt 5pt 12pt #777777;
+	box-shadow: 5pt 5pt 12pt #777777;
 }
 
 .reserved {
 	background-color: rgb(130, 179, 255);
 }
+
 .offerGridPanel {
 	margin-top: 10px;
 	margin-bottom: 0px;
 }
+
 .bottomContent {
 	margin: 1px;
 	margin-top: 10px;
 }
+
 .bottomCloseContent {
 	margin: 1px;
 	margin-top: 3px;
 }
+
 .buttonElement {
 	margin-right: 5px;
 }
 
 .message {
-	color: #d20005; 
-	font-size: 14px;	
+	color: #d20005;
+	font-size: 14px;
 }
+
 .messages {
 	color: #d20005;
 }
+
 .indexBlock {
 	margin: 20pt;
 }
+
 .offerTable {
-	border:solid 1px
+	border: solid 1px
 }
-/* Tablets (portrait) | <800px */	
+
+.navigationLink{
+	margin-right: 6px;
+}
+
+/* Tablets (portrait) | <800px */
 @media only screen and (max-width: 50em) {
 	.headerText {
 		font-size: 2.3em;
@@ -145,3 +175,11 @@ h1.contentTitle {
 		float: none;
 		width: 100%;
 	}
+}
+
+@media only screen and (max-width: 35em) {
+	.mainContent {
+		border-width: 0px;
+		box-shadow: none;
+	}
+}
