Unused method removed from backing bean, fixed bug with handling 'mark as realized' action

--- a/travel-web/WebContent/resources/css/default.css
+++ b/travel-web/WebContent/resources/css/default.css
@@ -51,8 +51,11 @@ h1.contentTitle {
 	padding-right: 3px;
 }
 
-.valueColumn input{
+.valueColumn input {
 	width: 85pt;
+}
+.valueColumn input[type=checkbox] {
+	width: auto;
 }
 
 .titleColumn {
